# my-elfloader

./: .gitignore  Cargo.toml  build.rs  build.sh  flake.nix  result
csrc/: CMakeLists.txt  spike-interfaces.cc  spike-interfaces.h
libspike/: lib.rs  spike-interfaces.cc  wrapper.cc  wrapper.h
libspike/lib/cmake/libspike/: libspike-config.cmake
nix/: overlay.nix
nix/pkgs/: elf-loader.nix  libspike-interfaces.nix  libspike.nix  my-elfloader.nix  mylibspike.nix
nix/t1/: elaborator.nix
resources/: config.json  perf.txt  wave.fst
src/: difftest.rs  dut.rs  lib.rs  main.rs  processor.rs  sim.rs  spike-interfaces.cc  spike.rs
test/: dummy.txt  rvv-vp-intrinsic-add-mlir.elf
